Dashboard + melhorias + nosniffing
